# routes/api-docs.js
@@ -4,6 +4,9 @@ const swaggerDocument = require('../swagger.json');
 
 router.use('/', swaggerUi.serve);
 
-router.get('/', swaggerUi.setup(swaggerDocument));
+router.get('/', swaggerUi.setup(swaggerDocument), () => {
+    // #swagger.ignore = true
+});
+
 
 module.exports = router;
